[gd_scene load_steps=2 format=3 uid="uid://saveinspector001"]

[ext_resource type="Script" path="res://addons/save_inspector/save_dock.gd" id="1_script"]

[node name="SaveInspector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RefreshButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true

[connection signal="pressed" from="VBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="item_activated" from="VBoxContainer/Tree" to="." method="_on_tree_item_activated"]
